# rust-verification-tools

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: build-push-docker-images.yaml  rust.yaml
cargo-verify/: Cargo.toml  rustfmt.toml
cargo-verify/src/: backends_common.rs  klee.rs  main.rs  proptest.rs  run_tools.rs  seahorn.rs  smack.rs  utils.rs
compatibility-test/: Cargo.toml
compatibility-test/src/: collections.rs  compose.rs  dynamic.rs  enumeration.rs  main.rs  shouldfail.rs
demos/: README.md
demos/bottlenecks/bornholt2018-1/: Cargo.toml
demos/bottlenecks/bornholt2018-1/src/: main.rs
demos/bottlenecks/merging/: Cargo.toml
demos/bottlenecks/merging/src/: main.rs
demos/bottlenecks/regex/: Cargo.toml
demos/bottlenecks/regex/src/: main.rs
demos/simple/annotations/: Cargo.toml  verify.sh
demos/simple/annotations/src/: main.rs
demos/simple/argv/: Cargo.toml
demos/simple/argv/src/: main.rs
demos/simple/errors/: Cargo.toml  verify.sh
demos/simple/errors/src/: main.rs
demos/simple/ffi/: Cargo.toml  bar.c  build.rs
demos/simple/ffi/src/: main.rs
demos/simple/klee/: Cargo.toml  verify.sh
demos/simple/klee/src/: main.rs
demos/simple/mirai/: Cargo.toml  verify.sh
demos/simple/mirai/src/: main.rs
demos/simple/seahorn/: Cargo.toml  verify.sh
demos/simple/seahorn/src/: main.rs
demos/simple/string/: Cargo.toml
demos/simple/string/src/: main.rs
demos/simple/vectest/: Cargo.toml
demos/simple/vectest/src/: main.rs
docker/: README.md  build  init  mkimage  run  rvt_Dockerfile  sudo_if_needed.bash
docker/base/: Dockerfile
docker/klee/: Dockerfile  README.md  build  build_googletest  build_klee  build_minisat  build_stp  run_klee
docker/minisat/: Dockerfile
docker/rmc/: Dockerfile
docker/rust/: Dockerfile  README.md  build  build_rust  install_rushup  run_rust
docker/rust2calltree/: Dockerfile
docker/rust_verification/: Dockerfile  README.md  build  cargo_build  cargo_tail  klee_test  main.rs  replay_input_values  run  run_klee
docker/rustc/: Dockerfile
docker/rvt/: Dockerfile  build
docker/seahorn/: Dockerfile
docker/smack/: Dockerfile
docker/solvers/: Dockerfile
docker/stp/: Dockerfile  build_stp
docker/yices/: Dockerfile
docker/z3/: Dockerfile
docs/: Documentation.md  Gemfile  README.md  _config.yml  about.md  index.md  install-crux.md  install-klee.md  install-rust.md  installation.md  propverify.md  tools.md  using-annotations.md  using-argv.md  using-ffi.md  using-klee.md  using-propverify.md
docs/_drafts/: fixing-bottlenecks.md
docs/_internal/: howto-blog.md
docs/_posts/: 2020-09-01-using-klee.md  2020-09-02-using-annotations.md  2020-09-03-using-propverify.md  2020-09-07-install-crux.md  2020-09-09-using-argv.md  2020-12-11-using-ffi.md  2021-03-12-profiling-rust.md  2021-03-20-verifying-vectorized-code.md  2021-03-29-klee-status.md  2021-03-29-using-seahorn.md  2021-04-01-using-seahorn.md  2021-05-15-verifying-vectorized-code2.md  2021-05-19-fixing-bottlenecks.md  2021-07-14-coreutils.md  2021-08-15-rvt-risks.md  2021-08-22-rust-on-linux-1.md  2021-08-23-rust-on-linux-2.md  2021-08-24-rust-on-linux-3.md  2021-09-01-retrospective.md
docs/assets/: main.scss
inkwell/src/values/: fn_value.rs  global_value.rs  struct_value.rs  traits.rs
propverify/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
propverify/src/: lib.rs  strategy.rs
runtime/: .gitignore  AUTHORS  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
runtime/src/: atexit.c  memrchr.c  posix_memalign.c  pthread.c
rust2calltree/: Cargo.toml
rust2calltree/src/: main.rs
rvt-patch-llvm/: Cargo.toml
rvt-patch-llvm/src/: main.rs
scripts/: cargo-verify  cargo-verify-seahorn.sh  old-cargo-verify  regression-test
simd_emulation/: .gitignore  Cargo.toml  LICENSE-MIT  Makefile
simd_emulation/src/: lib.rs
test-inkwell/: Cargo.toml  test.bc
test-inkwell/src/: main.rs
verification-annotations/: AUTHORS  CHANGELOG.md  Cargo.toml  README.md  build.rs  test_rmc.rs
verification-annotations/lib/: seahorn.c
verification-annotations/src/: crux.rs  klee.rs  lib.rs  seahorn.rs  tests.rs  traits.rs  verifier_std.rs
verification-annotations/src/verifier/: crux.rs  klee.rs  mirai.rs  mod.rs  rmc.rs  seahorn.rs  smack.rs
