[package]
name = "cargo-verify"
version = "0.1.0"
authors = ["Shaked Flur <sflur@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
cargo_metadata = "0.12.3"
glob = "0.3.0"
lazy_static = "1.4.0"
log  = "0.4"
num_cpus = "1.0"
rayon = "1.5.0"
regex = "1.4.3"
rustc-demangle = "0.1"
serde = { version = "1.0", features = ["derive"] }
shell-escape = "0.1.5"
stderrlog = "0.5"
structopt = "0.3"
tinytemplate = "1.1"
