[package]
name = "compatibility-test"
version = "0.1.0"
authors = [
        "Alastair Reid <adreid@google.com>",
        "Shaked Flur <sflur@google.com>"
        ]
edition = "2018"
description = "Tests for both the propverify and the proptest crates - to check compatibility."

[features]
verify = [ "propverify" ]

[dependencies]
propverify = { path="../propverify", optional=true }
proptest = { version = "*", optional=true }
