[package]
name = "propverify"
version = "0.1.0"
authors = [
        "Alastair Reid <adreid@google.com>",
        "Shaked Flur <sflur@google.com>"
        ]
edition = "2018"
description = "Library for building verification test harnesses that implements the proptest API"
categories = ["development-tools::testing"]
keywords = ["klee", "proptest", "property", "verification", "testing", "quickcheck", "fuzz", "hypothesis"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
# Enable support for symbolic f32 and f64
float = []

verifier-klee = [ "verification-annotations/verifier-klee", "float" ]
verifier-crux = [ "verification-annotations/verifier-crux" ]
verifier-seahorn = [ "verification-annotations/verifier-seahorn" ]
verifier-smack = [ "verification-annotations/verifier-smack" ]

[dependencies]
verification-annotations = { path = "../verification-annotations" }
