[package]
name = "rvt-patch-llvm"
version = "0.1.0"
authors = ["Shaked Flur <fshaked@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
log  = "0.4"
stderrlog = "0.5"
regex = "0.2"
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
# inkwell = { features = ["llvm10-0"] }
inkwell = { git = "https://github.com/alastairreid/inkwell", features = ["llvm10-0"] }
# inkwell = { path = "../../inkwell", features = ["llvm10-0"] }
