[package]
name = "rvt-patch-llvm"
version = "0.1.0"
authors = ["Shaked Flur <sflur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log  = "0.4"
stderrlog = "0.5"
structopt = "0.3"
regex = "0.2"

inkwell = { git = "https://github.com/alastairreid/inkwell" }

[features]
llvm10 = ["inkwell/llvm10-0"]
llvm11 = ["inkwell/llvm11-0"]
