[package]
name = "verification-annotations"
version = "0.1.0"
authors = [
        "Alastair Reid <adreid@google.com>",
        "Shaked Flur <sflur@google.com>"
        ]
edition = "2018"
description = "verification annotation library"
categories = ["development-tools::testing"]
keywords = ["klee", "crux", "rmc", "seahorn", "mir", "verification", "testing"]
license = "MIT OR Apache-2.0"

[features]
verifier-crux = []
verifier-klee = []
verifier-rmc = []
verifier-seahorn = [ "cc" ]

[build-dependencies]
cc = { optional = true, version = "1.0" }
