[package]
name = "verification-annotations"
version = "0.1.0"
authors = [
        "Alastair Reid <adreid@google.com>",
        "Shaked Flur <sflur@google.com>"
        ]
edition = "2018"
description = "verification annotation library"
categories = ["development-tools::testing"]
keywords = ["klee", "crux", "seahorn", "mir", "verification", "testing"]
license = "MIT OR Apache-2.0"

[features]
default = [ "std" ]
std = []
verifier-crux = []
verifier-klee = []
verifier-seahorn = [ "cc" ]
verifier-smack = [ "cc" ]

[build-dependencies]
cc = { optional = true, version = "1.0" }
